# csotools

./: LICENSE  README.md  format.md  pyproject.toml
csotools/: __init__.py  block_index.py  compress.py  decompress.py  header.py  main_cli.py
